--- a/_저장/archive.html
+++ b/_저장/archive.html
@@ -24,39 +24,10 @@ layout: default
     {{ content }}
   </div>
 </div>
-
-<!-- 상단 광고-->
-<div class="ad-container" style="text-align: center; padding-bottom: 20px;">
-  <ins class="adsbygoogle"
-       style="display:block"
-       data-ad-format="autorelaxed"
-       data-ad-client="ca-pub-9374368296307755"
-       data-ad-slot="4454543532"></ins>
-  <script>
-      (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
-</div>
-
-{{ content }}
-
-<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
-
-{% if paginator %}
-  {% assign posts = paginator.posts %}
-{% else %}
-  {% assign posts = site.posts %}
-{% endif %}
-
-{% assign entries_layout = page.entries_layout | default: 'list' %}
-<div class="entries-{{ entries_layout }}">
-  {% include documents-collection.html entries=posts type=entries_layout %}
-</div>
-
-{% include paginator.html %}
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+  someData  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>광고 페이지</title>
@@ -224,6 +195,7 @@ layout: default
             ipVisitData[clientIp] = visitData;
         }
 
+        let visitData = ipVisitData[clientIp] || { count: 0, lastVisit: 0 };
         visitData.lastVisit = currentTime;
         ipVisitData[clientIp] = visitData;
         localStorage.setItem(ipVisitKey, JSON.stringify(ipVisitData));
@@ -232,6 +204,7 @@ layout: default
         handleVisit();
     });
   </script>
+
 </head>
 <body>
 
@@ -287,113 +260,19 @@ layout: default
         <span id="redirectCounter">7초 후 페이지를 이동합니다...</span>
         <button onclick="closeAd()" style="border:none; background:none; font-size:20px; cursor:pointer;">&times;</button>
     </div>
-</div>
+  </div>
+
+<!-- Liquid 템플릿에서 post_urls 변수를 정의 -->
+{% assign post_urls = site.posts | map: 'url' | jsonify %}
 
 <!-- JavaScript 코드에서 postUrls 변수를 사용 -->
 <script>
-    const postUrls = JSON.parse('{{ post_urls | jsonify | escape }}');
-    console.log("Post URLs:", postUrls);
-  </script>
-    
-
-<script>
-  window.onload = function() {
-      if (!shouldShowPopup()) return;
+  const postUrls = JSON.parse('{{ post_urls | jsonify | escape }}');
+  console.log("Post URLs:", postUrls);
+</script>
   
-      // 5초에서 10초 사이의 랜덤 딜레이 설정
-      let randomDelay = Math.floor(Math.random() * (10000 - 5000 + 1)) + 5000;
-  
-      setTimeout(showPopup, randomDelay);
-  };
-  
-  function showPopup() {
-      document.getElementById('overlay').style.display = 'block';
-      document.getElementById('popup').style.display = 'block';
-      document.body.style.overflow = 'hidden'; // 스크롤 비활성화
-  
-      let counter = 5;
-      let popupCounter = document.getElementById('popupCounter');
-      let countdown = setInterval(function() {
-          counter--;
-          popupCounter.textContent = `${counter}초 후 광고 시청이 시작됩니다...`;
-          if (counter <= 0) {
-              clearInterval(countdown);
-              popupCounter.textContent = "광고를 시작할 준비가 되었습니다.";
-              showAd(); // 카운터 후 광고를 자동으로 표시
-          }
-      }, 1000);
-  }
-  
-  function closePopup() {
-      document.getElementById('overlay').style.display = 'none';
-      document.getElementById('popup').style.display = 'none';
-      document.body.style.overflow = ''; // 스크롤 활성화
-  }
-  
-  function showAd() {
-      document.getElementById('popup').style.display = 'none'; // 팝업을 닫음
-      document.getElementById('adContainer').style.display = 'block'; // 광고 컨테이너 표시
-      document.body.style.overflow = 'hidden'; // 스크롤 비활성화
-  
-      (adsbygoogle = window.adsbygoogle || []).push({});
-  
-      let adCounter = document.getElementById('adCounter');
-      let closeButton = document.querySelector('.close-btn');
-      closeButton.style.display = 'inline';
-  
-      // 5초 광고 닫기 카운터
-      let counter = 5;
-      let countdown = setInterval(function() {
-          counter--;
-          adCounter.textContent = `광고가 ${counter}초 후에 닫힐 수 있습니다...`;
-          if (counter <= 0) {
-              clearInterval(countdown);
-              adCounter.textContent = "광고를 닫을 수 있습니다.";
-              closeButton.style.display = 'inline';
-  
-              // 페이지 이동 7초 카운터
-              let redirectCounter = document.getElementById('redirectCounter');
-              let redirectTime = 7;
-              let redirectCountdown = setInterval(function() {
-                  redirectTime--;
-                  redirectCounter.textContent = `${redirectTime}초 후 페이지를 이동합니다...`;
-                  if (redirectTime <= 0) {
-                      clearInterval(redirectCountdown);
-                      
-                      // postUrls 배열에서 무작위 페이지 선택 및 이동
-                      const randomPage = postUrls[Math.floor(Math.random() * postUrls.length)];
-                      window.location.href = randomPage;
-                  }
-              }, 1000);
-          }
-      }, 1000);
-  }
-  
-  function closeAd() {
-      document.getElementById('adContainer').style.display = 'none';
-      document.body.style.overflow = '';
-      alert('광고 시청이 완료되었습니다.');
-      incrementClickCount();
-  }
-  
-  function incrementClickCount() {
-      let currentDate = new Date().toISOString().split('T')[0];
-      let clickData = JSON.parse(localStorage.getItem('clickData')) || { date: currentDate, count: 0 };
-  
-      if (clickData.date !== currentDate) {
-          clickData = { date: currentDate, count: 0 };
-      }
-  
-      clickData.count++;
-      localStorage.setItem('clickData', JSON.stringify(clickData));
-  }
-  
-  function shouldShowPopup() {
-      let currentDate = new Date().toISOString().split('T')[0];
-      let clickData = JSON.parse(localStorage.getItem('clickData')) || { date: currentDate, count: 0 };
-      return clickData.count < 2;
-  }
-  </script>
+  <!-- 외부 JavaScript 파일 참조 -->
+  <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
   
 </body>
 </html>
