--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </a>
         </div>
         <div class="item">
-            <a href="동물/동물.html">
+            <a href="동물/index.html">
                 <div class="item-image">
                     <img src="동물/동물.png" alt="수호 동물 테스트">
                 </div>
