--- a/동물/index.html
+++ b/동물/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <!-- 카카오 SDK -->
-<script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
-<script>
-    Kakao.init('1a44c2004824d4e16e69f1fc7e81d82c');
-</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>나의 수호동물 찾기 테스트</title>
     <link rel="stylesheet" href="style.css">
+    
+    <!-- 구글 광고 스크립트 -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
+     crossorigin="anonymous"></script>
+    
+    <!-- 카카오 SDK -->
+    <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+    <script>
+        Kakao.init('1a44c2004824d4e16e69f1fc7e81d82c');
+    </script>
 </head>
 <body>
-    <!-- 구글 광고 -->
+    <!-- 구글 광고 섹션 -->
     <div class="ad-section">
-        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755"
-         crossorigin="anonymous"></script>
+        <!-- k-test 상단 -->
         <ins class="adsbygoogle"
              style="display:block"
              data-ad-client="ca-pub-9374368296307755"
@@ -23,7 +27,7 @@
              data-ad-format="auto"
              data-full-width-responsive="true"></ins>
         <script>
-             (adsbygoogle = window.adsbygoogle || []).push({});
+            (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
     </div>
 
