--- a/404.html
+++ b/404.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>404 - Not Found</title>
   <script>
-    window.location.replace("https://testpro.site/k-test");
+    window.location.replace("https://testpro.site/");
   </script>
 </head>
 <body>
-  <p>If you are not redirected, click <a href="https://testpro.site/k-test">here</a>.</p>
+  <p>If you are not redirected, click <a href="https://testpro.site/">here</a>.</p>
 </body>
 </html>
