--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
 
   gtag('config', 'AW-11438616604');
 </script>
+<!-- Event snippet for 페이지 조회 conversion page
+In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+<script>
+    function gtag_report_conversion(url) {
+      var callback = function () {
+        if (typeof(url) != 'undefined') {
+          window.location = url;
+        }
+      };
+      gtag('event', 'conversion', {
+          'send_to': 'AW-11438616604/1mSHCLiKx_4YEJzgrc4q',
+          'event_callback': callback
+      });
+      return false;
+    }
+    </script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>테스트프로 - 당신의 이야기를 찾아서</title>
