--- a/스트레스/index.html
+++ b/스트레스/index.html
@@ -10,19 +10,23 @@
     <script>
         Kakao.init('1a44c2004824d4e16e69f1fc7e81d82c');
     </script>
+    <!-- 구글 애드센스 -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- 광고 -->
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-client="ca-pub-9374368296307755"
-         data-ad-slot="3201247599"
-         data-ad-format="auto"
-         data-full-width-responsive="true"></ins>
-    
     <div class="container">
         <h1>당신의 스트레스 수준은?</h1>
+        
+        <!-- 상단 광고 -->
+        <div class="ad-container">
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-9374368296307755"
+                 data-ad-slot="3201247599"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+        </div>
+
         <div id="quiz">
             <div id="question"></div>
             <div id="options"></div>
@@ -35,7 +39,6 @@
         <div class="popup-content">
             <div id="ad-timer">광고 종료까지 <span id="countdown">7</span>초</div>
             <div id="ad-space">
-                <!-- 광고 공간 -->
                 <ins class="adsbygoogle"
                      style="display:block"
                      data-ad-client="ca-pub-9374368296307755"
@@ -45,9 +48,11 @@
             </div>
             <div id="result-content" style="display: none;">
                 <h2>테스트 결과</h2>
-                <p id="result-text"></p>
-                <button id="share-kakao">카카오톡 공유하기</button>
-                <button id="close-popup">닫기</button>
+                <div id="result-text"></div>
+                <div class="button-group">
+                    <button id="share-kakao">카카오톡 공유하기</button>
+                    <button id="close-popup">닫기</button>
+                </div>
             </div>
         </div>
     </div>
