--- a/스트레스/index.html
+++ b/스트레스/index.html
@@ -38,7 +38,7 @@
     <div id="result-popup" class="popup">
         <div class="popup-content">
             <!-- 광고 타이머 -->
-            <div id="ad-timer">광고 종료까지 <span id="countdown">7</span>초</div>
+            <div id="ad-timer">결과값 분석중 입니다 <span id="countdown">7</span>초</div>
             
             <!-- 광고 영역 -->
             <div id="ad-space">
