--- a/감정/index.html
+++ b/감정/index.html
@@ -48,7 +48,7 @@
 
     <div id="ad-popup" class="popup">
         <div class="popup-content">
-            <div class="countdown">7</div>
+            <div id="ad-timer">결과값 분석중 입니다 <span id="countdown">7</span>초</div>
             <div class="ad-container">
                 <!-- 구글 광고 -->
                 <ins class="adsbygoogle"
