--- a/스트레스/index.html
+++ b/스트레스/index.html
@@ -3,45 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>스트레스 수준 테스트</title>
+    <title>나의 사랑의 언어 테스트</title>
     <link rel="stylesheet" href="style.css">
     <!-- 카카오 SDK -->
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
     <script>
         Kakao.init('1a44c2004824d4e16e69f1fc7e81d82c');
     </script>
-    <!-- 구글 애드센스 -->
+    <!-- 구글 광고 -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
-        <h1>당신의 스트레스 수준은?</h1>
-        
-        <!-- 상단 광고 -->
-        <div class="ad-container">
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-9374368296307755"
-                 data-ad-slot="3201247599"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-        </div>
+        <div class="test-container">
+            <div id="start-section">
+                <div class="heart-icon"></div>
+                <h1>나의 사랑의 언어 찾기</h1>
+                <p class="intro-text">당신의 사랑을 표현하는 방식을 알아보세요!</p>
+                <button id="start-btn" class="pulse-btn">테스트 시작하기</button>
+            </div>
 
-        <div id="quiz">
-            <div id="question"></div>
-            <div id="options"></div>
-            <button id="submit-btn" style="display: none;">결과 보기</button>
+            <div id="question-section" style="display: none;">
+                <div class="progress-container">
+                    <div class="progress-bar">
+                        <div class="progress"></div>
+                    </div>
+                    <span class="question-counter">1/10</span>
+                </div>
+                <h2 id="question-text"></h2>
+                <div class="answers">
+                    <button class="answer-btn" data-type="words">매우 그렇다</button>
+                    <button class="answer-btn" data-type="time">그렇다</button>
+                    <button class="answer-btn" data-type="touch">보통이다</button>
+                    <button class="answer-btn" data-type="service">아니다</button>
+                    <button class="answer-btn" data-type="gifts">전혀 아니다</button>
+                </div>
+            </div>
+
+            <div id="result-section" style="display: none;">
+                <div class="result-header">
+                    <div class="result-icon"></div>
+                    <h2>당신의 사랑의 언어는</h2>
+                </div>
+                <div class="result-content">
+                    <h3 id="result-title"></h3>
+                    <p id="result-description"></p>
+                    <div class="chart-container">
+                        <canvas id="resultChart"></canvas>
+                    </div>
+                </div>
+                <div class="share-container">
+                    <button class="share-btn">결과 공유하기</button>
+                    <button class="retry-btn">다시 테스트하기</button>
+                </div>
+            </div>
         </div>
     </div>
 
-    <!-- 결과 팝업 -->
-    <div id="result-popup" class="popup">
+    <!-- 광고 팝업 -->
+    <div id="ad-popup" class="popup">
         <div class="popup-content">
-            <!-- 광고 타이머 -->
-            <div id="ad-timer">결과값 분석중 입니다 <span id="countdown">7</span>초</div>
-            
-            <!-- 광고 영역 -->
-            <div id="ad-space">
+            <div class="countdown">7</div>
+            <div class="ad-container">
                 <ins class="adsbygoogle"
                      style="display:block"
                      data-ad-client="ca-pub-9374368296307755"
@@ -49,22 +72,9 @@
                      data-ad-format="auto"
                      data-full-width-responsive="true"></ins>
             </div>
-
-            <!-- 결과 내용 (처음에는 숨김) -->
-            <div id="result-content" style="display: none;">
-                <div id="result-emoji" class="result-emoji"></div>
-                <div id="result-text"></div>
-                <div class="button-group">
-                    <button id="share-kakao">카카오톡 공유하기</button>
-                    <button id="close-popup">닫기</button>
-                </div>
-            </div>
         </div>
     </div>
 
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
     <script src="script.js"></script>
 </body>
 </html>
