--- a/사랑/index.html
+++ b/사랑/index.html
@@ -3,54 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>나의 감정 상태 테스트</title>
+    <title>나의 사랑의 언어 테스트</title>
     <link rel="stylesheet" href="style.css">
+    <!-- 카카오 SDK -->
     <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+    <script>
+        Kakao.init('1a44c2004824d4e16e69f1fc7e81d82c');
+    </script>
+    <!-- 구글 광고 -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
         <div class="test-container">
-            <h1>나의 감정 상태 테스트</h1>
             <div id="start-section">
-                <div class="emotion-icon"></div>
-                <button id="start-btn">테스트 시작하기</button>
+                <div class="heart-icon"></div>
+                <h1>나의 사랑의 언어 찾기</h1>
+                <p class="intro-text">당신의 사랑을 표현하는 방식을 알아보세요!</p>
+                <button id="start-btn" class="pulse-btn">테스트 시작하기</button>
             </div>
-            
+
             <div id="question-section" style="display: none;">
-                <div class="progress-bar">
-                    <div class="progress"></div>
+                <div class="progress-container">
+                    <div class="progress-bar">
+                        <div class="progress"></div>
+                    </div>
+                    <span class="question-counter">1/10</span>
                 </div>
                 <h2 id="question-text"></h2>
                 <div class="answers">
-                    <button class="answer-btn" data-score="1">전혀 아니다</button>
-                    <button class="answer-btn" data-score="2">아니다</button>
-                    <button class="answer-btn" data-score="3">보통이다</button>
-                    <button class="answer-btn" data-score="4">그렇다</button>
-                    <button class="answer-btn" data-score="5">매우 그렇다</button>
+                    <button class="answer-btn" data-type="words">매우 그렇다</button>
+                    <button class="answer-btn" data-type="time">그렇다</button>
+                    <button class="answer-btn" data-type="touch">보통이다</button>
+                    <button class="answer-btn" data-type="service">아니다</button>
+                    <button class="answer-btn" data-type="gifts">전혀 아니다</button>
                 </div>
             </div>
 
             <div id="result-section" style="display: none;">
-                <h2>당신의 감정 상태는...</h2>
-                <div class="result-content">
+                <div class="result-header">
                     <div class="result-icon"></div>
+                    <h2>당신의 사랑의 언어는</h2>
+                </div>
+                <div class="result-content">
                     <h3 id="result-title"></h3>
                     <p id="result-description"></p>
+                    <div class="chart-container">
+                        <canvas id="resultChart"></canvas>
+                    </div>
                 </div>
-                <div class="share-buttons">
-                    <button id="kakao-share-btn" class="share-btn kakao">카카오톡 공유하기</button>
-                    <button id="retry-btn" class="share-btn retry">다시 테스트하기</button>
+                <div class="share-container">
+                    <button class="share-btn">결과 공유하기</button>
+                    <button class="retry-btn">다시 테스트하기</button>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- 광고 팝업 -->
     <div id="ad-popup" class="popup">
         <div class="popup-content">
-            <div id="ad-timer">결과값 분석중 입니다 <span id="countdown">7</span>초</div>
+            <div id="ad-timer">결과값 분석중 입니다 </div>
+            <div class="countdown">7</div>
             <div class="ad-container">
-                <!-- 구글 광고 -->
                 <ins class="adsbygoogle"
                      style="display:block"
                      data-ad-client="ca-pub-9374368296307755"
@@ -60,6 +75,7 @@
             </div>
         </div>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
