--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
     <header class="page-header wrapper">
         <nav>
             <ul class="main-nav">
-                <li><a href="심리테스트.html">심리테스트</a></li>
+                <li><a href="심리테스트.html"></a></li>
             </ul>
         </nav>
     </header>
