--- a/사랑/index.html
+++ b/사랑/index.html
@@ -55,6 +55,7 @@
                 <div class="share-container">
                     <button class="share-btn">결과 공유하기</button>
                     <button class="retry-btn">다시 테스트하기</button>
+                    <a href="https://testpro.site" class="home-btn">다른 테스트 하기</a>
                 </div>
             </div>
         </div>
