--- a/사랑/index.html
+++ b/사랑/index.html
@@ -22,6 +22,15 @@
                 <p class="intro-text">당신의 사랑을 표현하는 방식을 알아보세요!</p>
                 <button id="start-btn" class="pulse-btn">테스트 시작하기</button>
             </div>
+        <!-- 상단 광고 -->
+        <div class="ad-container">
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-client="ca-pub-9374368296307755"
+                 data-ad-slot="3201247599"
+                 data-ad-format="auto"
+                 data-full-width-responsive="true"></ins>
+        </div>
 
             <div id="question-section" style="display: none;">
                 <div class="progress-container">
