--- a/감정/index.html
+++ b/감정/index.html
@@ -41,6 +41,7 @@
                 <div class="share-buttons">
                     <button id="kakao-share-btn" class="share-btn kakao">카카오톡 공유하기</button>
                     <button id="retry-btn" class="share-btn retry">다시 테스트하기</button>
+                    <a href="https://testpro.site" class="home-btn">다른 테스트 하기</a>
                 </div>
             </div>
         </div>
