--- a/동물/동물.html
+++ b/동물/동물.html
@@ -132,6 +132,7 @@
         
         <div class="share-buttons">
             <button class="share-button kakao-share" onclick="shareOnKakao()">카카오톡으로 공유하기</button>
+            <a href="https://testpro.site" class="home-btn">다른 테스트 하기</a>
         </div>
     </div>
 
