--- a/색/results.html
+++ b/색/results.html
@@ -35,6 +35,7 @@
 
         <!-- 다음 버튼 -->
         <button id="nextBtn">다음</button>
+        <a href="https://testpro.site" class="home-btn">다른 테스트 하기</a>
 
         <!-- 광고 하단 삽입 -->
         <div class="ad-container">
