--- a/스트레스/index.html
+++ b/스트레스/index.html
@@ -56,6 +56,7 @@
                 <div id="result-text"></div>
                 <div class="button-group">
                     <button id="share-kakao">카카오톡 공유하기</button>
+                    <a href="https://testpro.site" class="home-btn">다른 테스트 하기</a>
                     <button id="close-popup">닫기</button>
                 </div>
             </div>
