--- a/타로/index.html
+++ b/타로/index.html
@@ -74,6 +74,7 @@
         </div>
 
         <button id="shareKakao" style="display:none;">카카오톡 공유하기</button>
+        <a href="https://testpro.site" class="home-btn">다른 테스트 하기</a>
     </div>
 
     <script type="module" src="script.js"></script>
