--- a/행운/index.html
+++ b/행운/index.html
@@ -98,6 +98,7 @@
                 <i class="fas fa-share-alt"></i>
                 카카오톡으로 공유하기
             </button>
+            <a href="https://testpro.site" class="home-btn">다른 테스트 하기</a>
         </div>
 
         <!-- 하단 광고 배너 -->
