--- a/index.html
+++ b/index.html
@@ -152,6 +152,38 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <div class="item-title">타로카드 운세 보기</div>
             </a>
         </div>
+        <div class="item">
+            <a href="스트레스/index.html">
+                <div class="item-image">
+                    <img src="스트레스/스트레스.png" alt="타로카드 운세">
+                </div>
+                <div class="item-title">당신의 스트레스 수준은?</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="돈/index.html">
+                <div class="item-image">
+                    <img src="돈/재테크.png" alt="타로카드 운세">
+                </div>
+                <div class="item-title">당신의 재테크 유형을 알아보세요!</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="사랑/index.html">
+                <div class="item-image">
+                    <img src="사랑/사랑.png" alt="타로카드 운세">
+                </div>
+                <div class="item-title">당신의 사랑의 언어는?</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="사랑/index.html">
+                <div class="item-image">
+                    <img src="사랑/사랑.png" alt="타로카드 운세">
+                </div>
+                <div class="item-title">당신의 감정 온도는?</div>
+            </a>
+        </div>
     </div>
 
     <!-- 카카오톡 공유 버튼 -->
