--- a/사랑/index.html
+++ b/사랑/index.html
@@ -52,7 +52,7 @@
             <div id="result-section" style="display: none;">
                 <div class="result-header">
                     <div class="result-icon"></div>
-                    <h2>당신의 사랑의 언어는</h2>
+                    <h2>당신의 사랑의 언어는?</h2>
                 </div>
                 <div class="result-content">
                     <h3 id="result-title"></h3>
