--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             </a>
         </div>
         <div class="item">
-            <a href="사랑/index.html">
+            <a href="감정/index.html">
                 <div class="item-image">
-                    <img src="사랑/사랑.png" alt="타로카드 운세">
+                    <img src="감정/감정.png" alt="타로카드 운세">
                 </div>
                 <div class="item-title">당신의 감정 온도는?</div>
             </a>
