--- a/행복/index.html
+++ b/행복/index.html
@@ -27,9 +27,9 @@
         <!-- 시작 페이지 -->
         <div class="test-container">
             <div class="start-page" id="startPage">
-                <h1>당신의 행복 지수는?</h1>
+                <h1 class="main-title">당신의 행복 지수는?</h1>
                 <div class="start-img"></div>
-                <p>나의 진정한 행복 지수를 알아보세요!</p>
+                <p class="sub-title">나의 진정한 행복 지수를 알아보세요!</p>
                 <button class="start-btn">테스트 시작하기</button>
                 <div class="share-btn">
                     <div class="kakao-share">친구에게 공유하기</div>
@@ -38,21 +38,25 @@
 
             <!-- 질문 페이지 -->
             <div class="question-page hidden" id="questionPage">
-                <div class="progress-bar">
-                    <div class="progress"></div>
+                <div class="progress-container">
+                    <div class="progress-bar">
+                        <div class="progress"></div>
+                    </div>
+                    <div class="question-counter">
+                        <span id="questionNum">1</span>/15
+                    </div>
                 </div>
-                <h2 class="question-number">Q. <span id="questionNum">1</span>/15</h2>
                 <h2 class="question"></h2>
                 <div class="answers"></div>
             </div>
 
             <!-- 결과 페이지 -->
             <div class="result-page hidden" id="resultPage">
-                <h2>당신의 행복 지수 결과</h2>
+                <h2 class="result-title">당신의 행복 지수 결과</h2>
                 <div class="result-img"></div>
                 <div class="result-content"></div>
-                <button class="retry-btn" onclick="location.href='https://testpro.site'">다른 테스트 하기</button>
-                <div class="share-btn">
+                <div class="result-buttons">
+                    <button class="retry-btn" onclick="location.href='https://testpro.site'">다른 테스트 하기</button>
                     <div class="kakao-share">결과 공유하기</div>
                 </div>
             </div>
@@ -62,8 +66,10 @@
     <!-- 분석 팝업 -->
     <div class="analysis-popup hidden" id="analysisPopup">
         <div class="popup-content">
-            <div class="analysis-text">결과값 분석중입니다...</div>
-            <div class="countdown">7</div>
+            <div class="analysis-header">
+                <div class="analysis-text">결과값 분석중입니다...</div>
+                <div class="countdown">7</div>
+            </div>
             <div class="loading-spinner"></div>
             <!-- 팝업 광고 -->
             <div class="popup-ad">
