--- a/행복/index.html
+++ b/행복/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- 상단 광고 -->
     <div class="ad-container">
-        <ins class="adsbygoogle"
+        <ins class="adsbygoogle main-ad"
             style="display:block"
             data-ad-client="ca-pub-9374368296307755"
             data-ad-slot="3201247599"
@@ -30,7 +30,10 @@
                 <p class="sub-title">나의 진정한 행복 지수를 알아보세요!</p>
                 <button class="start-btn">테스트 시작하기</button>
                 <div class="share-btn">
-                    <div class="kakao-share">친구에게 공유하기</div>
+                    <div class="kakao-share">
+                        <div class="kakao-icon"></div>
+                        <span>친구에게 공유하기</span>
+                    </div>
                 </div>
             </div>
 
@@ -55,11 +58,9 @@
                 <div class="result-content"></div>
                 <div class="result-buttons">
                     <button class="retry-btn" onclick="location.href='https://testpro.site'">다른 테스트 하기</button>
-                    <div class="share-btn">
-                        <div class="kakao-share">
-                            <div class="kakao-icon"></div>
-                            <span>친구에게 공유하기</span>
-                        </div>
+                    <div class="kakao-share">
+                        <div class="kakao-icon"></div>
+                        <span>결과 공유하기</span>
                     </div>
                 </div>
             </div>
@@ -77,12 +78,12 @@
             
             <!-- 팝업 광고 -->
             <div class="popup-ad-container">
-                <ins class="adsbygoogle"
-                     style="display:block"
+                <ins class="adsbygoogle popup-ad"
+                     style="display:inline-block"
                      data-ad-client="ca-pub-9374368296307755"
                      data-ad-slot="3201247599"
-                     data-ad-format="auto"
-                     data-full-width-responsive="true"></ins>
+                     data-ad-format="rectangle"
+                     data-full-width-responsive="false"></ins>
             </div>
         </div>
     </div>
