--- a/사랑/index.html
+++ b/사랑/index.html
@@ -1,37 +1,39 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>나의 사랑의 언어 테스트</title>
-    <link rel="stylesheet" href="style.css">
-    <!-- 카카오 SDK -->
-    <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
-    <script>
-        Kakao.init('1a44c2004824d4e16e69f1fc7e81d82c');
-    </script>
-    <!-- 구글 광고 -->
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>나의 사랑의 언어 테스트</title>
+        <link rel="stylesheet" href="style.css">
+        <!-- 카카오 SDK -->
+        <script src="https://developers.kakao.com/sdk/js/kakao.min.js"></script>
+        <!-- Chart.js 추가 -->
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <!-- 구글 애드센스 -->
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
+    </head>
 <body>
+    <!-- 상단 광고 -->
+    <div class="ad-container">
+        <ins class="adsbygoogle main-ad"
+            style="display:block"
+            data-ad-client="ca-pub-9374368296307755"
+            data-ad-slot="3201247599"
+            data-ad-format="auto"
+            data-full-width-responsive="true"></ins>
+    </div>
+
     <div class="container">
         <div class="test-container">
+            <!-- 시작 페이지 -->
             <div id="start-section">
                 <div class="heart-icon"></div>
                 <h1>나의 사랑의 언어 찾기</h1>
                 <p class="intro-text">당신의 사랑을 표현하는 방식을 알아보세요!</p>
                 <button id="start-btn" class="pulse-btn">테스트 시작하기</button>
             </div>
-        <!-- 상단 광고 -->
-        <div class="ad-container">
-            <ins class="adsbygoogle"
-                 style="display:block"
-                 data-ad-client="ca-pub-9374368296307755"
-                 data-ad-slot="3201247599"
-                 data-ad-format="auto"
-                 data-full-width-responsive="true"></ins>
-        </div>
 
+            <!-- 질문 페이지 -->
             <div id="question-section" style="display: none;">
                 <div class="progress-container">
                     <div class="progress-bar">
@@ -49,6 +51,7 @@
                 </div>
             </div>
 
+            <!-- 결과 페이지 -->
             <div id="result-section" style="display: none;">
                 <div class="result-header">
                     <div class="result-icon"></div>
@@ -70,18 +73,23 @@
         </div>
     </div>
 
-    <!-- 광고 팝업 -->
+    <!-- 분석 팝업 -->
     <div id="ad-popup" class="popup">
         <div class="popup-content">
-            <div id="ad-timer">결과값 분석중 입니다 </div>
-            <div class="countdown">7</div>
-            <div class="ad-container">
-                <ins class="adsbygoogle"
-                     style="display:block"
+            <div class="analysis-header">
+                <div class="analysis-text">결과값 분석중입니다...</div>
+                <div class="countdown">7</div>
+                <div class="loading-spinner"></div>
+            </div>
+            
+            <!-- 팝업 광고 -->
+            <div class="popup-ad-container">
+                <ins class="adsbygoogle popup-ad"
+                     style="display:inline-block"
                      data-ad-client="ca-pub-9374368296307755"
                      data-ad-slot="3201247599"
-                     data-ad-format="auto"
-                     data-full-width-responsive="true"></ins>
+                     data-ad-format="rectangle"
+                     data-full-width-responsive="false"></ins>
             </div>
         </div>
     </div>
