--- a/연인/연인.html
+++ b/연인/연인.html
@@ -63,6 +63,7 @@
     <!-- 결과 섹션 -->
     <div id="resultSection" class="hidden">
         <h2>테스트 결과</h2>
+        <a href="https://testpro.site" class="home-btn">다른 테스트 하기</a>        
         <p id="resultText"></p>
         <!-- 소셜 미디어 공유 버튼이 여기 추가됩니다 -->
     </div>
