--- a/타로/index copy.html
+++ b/타로/index copy.html
@@ -45,6 +45,27 @@
                 <div class="card-front"></div>
             </div>
         </div>
+        <!-- 로딩 팝업 -->
+<div id="loadingPopup" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 1000; justify-content: center; align-items: center; flex-direction: column;">
+    <div style="color: white; text-align: center;">
+        <h2>🔮 타로 카드 분석중...</h2>
+        <p>당신의 운세를 해석하고 있습니다.</p>
+        <div class="loading-spinner"></div>
+    </div>
+</div>
+
+<!-- 광고 컨테이너 -->
+<div id="adContainer" style="display: none; position: fixed; bottom: 0; left: 0; width: 100%; background: white; z-index: 1001;">
+    <ins class="adsbygoogle"
+         style="display:block"
+         data-ad-client="ca-pub-9374368296307755"
+         data-ad-slot="1724698171"
+         data-ad-format="auto"
+         data-full-width-responsive="true"></ins>
+    <script>
+         (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+</div>
 
         <div class="reading-container">
             <div class="reading" id="reading1"></div>
@@ -53,6 +74,7 @@
         </div>
 
         <button id="shareKakao" style="display:none;">카카오톡 공유하기</button>
+        <a href="https://testpro.site" class="home-btn">다른 테스트 하기</a>
     </div>
 
     <script type="module" src="script.js"></script>
