--- a/동물1/동물.html
+++ b/동물1/동물.html
@@ -68,24 +68,24 @@
         </div>
     </div>
 
-    <!-- 분석중 팝업 -->
-    <div class="popup" id="analysis-popup">
-        <div class="popup-content">
-            <h2>🔮 결과 분석중...</h2>
-            <div class="loading-spinner"></div>
-            <div class="countdown">7</div>
-            
-            <!-- 팝업 광고 -->
-            <div class="popup-ad-container">
-                <ins class="adsbygoogle"
-                     style="display:inline-block"
-                     data-ad-client="ca-pub-9374368296307755"
-                     data-ad-slot="3201247599"
-                     data-ad-format="auto"
-                     data-full-width-responsive="true"></ins>
-            </div>
+<!-- 분석중 팝업 -->
+<div class="popup" id="analysis-popup">
+    <div class="popup-content">
+        <h2>🔮 결과 분석중...</h2>
+        <div class="loading-spinner"></div>
+        <div class="countdown">7</div>
+        
+        <!-- 팝업 광고 수정 -->
+        <div class="popup-ad-container">
+            <ins class="adsbygoogle popup-ad"
+                 style="display:block"
+                 data-ad-client="ca-pub-9374368296307755"
+                 data-ad-slot="3201247599"
+                 data-ad-format="rectangle"
+                 data-full-width-responsive="false"></ins>
         </div>
     </div>
+</div>
 
     <script src="script.js"></script>
 </body>
