--- a/색채/index.html
+++ b/색채/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- 상단 광고 -->
     <div class="ad-container">
-        <ins class="adsbygoogle main-ad"
+        <ins class="adsbygoogle"
             style="display:block"
             data-ad-client="ca-pub-9374368296307755"
             data-ad-slot="3201247599"
@@ -45,9 +45,7 @@
                     <span class="question-counter">1/10</span>
                 </div>
                 <h2 id="question-text"></h2>
-                <div class="color-choices">
-                    <!-- 색상 선택지는 JavaScript에서 동적으로 생성됨 -->
-                </div>
+                <div class="color-choices"></div>
             </div>
 
             <!-- 결과 페이지 -->
@@ -99,12 +97,12 @@
             
             <!-- 팝업 광고 -->
             <div class="popup-ad-container">
-                <ins class="adsbygoogle popup-ad"
-                     style="display:inline-block"
+                <ins class="adsbygoogle"
+                     style="display:block"
                      data-ad-client="ca-pub-9374368296307755"
                      data-ad-slot="3201247599"
-                     data-ad-format="rectangle"
-                     data-full-width-responsive="false"></ins>
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
             </div>
         </div>
     </div>
