--- a/index.html
+++ b/index.html
@@ -192,6 +192,14 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <div class="item-title">나의 행복 점수는?</div>
             </a>
         </div>
+        <div class="item">
+            <a href="mbti/index.html">
+                <div class="item-image">
+                    <img src="mbti/MBTI.png" alt="타로카드 운세">
+                </div>
+                <div class="item-title">나의 행복 점수는?</div>
+            </a>
+        </div>
     </div>
 
     <!-- 카카오톡 공유 버튼 -->
