--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <div class="item-image">
                     <img src="mbti/MBTI.png" alt="타로카드 운세">
                 </div>
-                <div class="item-title">나의 행복 점수는?</div>
+                <div class="item-title">간단 MBTI 보기</div>
             </a>
         </div>
     </div>
