--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
 
   gtag('config', 'AW-11438616604');
 </script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3KMQYG1NY7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3KMQYG1NY7');
+</script>
 <!-- Event snippet for 페이지 조회 conversion page
 In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
 <script>
