--- a/사랑/index.html
+++ b/사랑/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko">
     <head>
+        <!-- Event snippet for 페이지 조회 conversion page -->
+<script>
+    gtag('event', 'conversion', {'send_to': 'AW-11438616604/1mSHCLiKx_4YEJzgrc4q'});
+  </script>
+  
         <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11438616604">
 </script>
