--- a/bbb/humor_1.html
+++ b/bbb/humor_1.html
@@ -29,27 +29,27 @@
         <h1>유머 게시판</h1>
         <ul style="list-style: none; padding: 0;">
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./필독-남편이-결혼-전-연애하던-시절-소개팅한-걸-알게된-아내-비밀.html" style="text-decoration: none; color: #333; display: block;">
+            <a href="./절대-남편이-결혼-전-연애하던-시절-소개팅한-걸-알게된-아내-순간.html" style="text-decoration: none; color: #333; display: block;">
                 <h2 style="margin: 0; font-size: 18px;">남편이 결혼 전 연애하던 시절 소개팅한 걸 알게된 아내</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./상상초월-호감인지-착각인지-알려줘.jpg-반전.html" style="text-decoration: none; color: #333; display: block;">
+            <a href="./역대급-호감인지-착각인지-알려줘.jpg-분석.html" style="text-decoration: none; color: #333; display: block;">
                 <h2 style="margin: 0; font-size: 18px;">호감인지 착각인지 알려줘.jpg</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./화제-분양-보냈더니-8km-거리를-돌아온-강아지-사실.html" style="text-decoration: none; color: #333; display: block;">
+            <a href="./논란-분양-보냈더니-8km-거리를-돌아온-강아지-현실.html" style="text-decoration: none; color: #333; display: block;">
                 <h2 style="margin: 0; font-size: 18px;">분양 보냈더니 8km 거리를 돌아온 강아지</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./궁금-아내에게-핸드폰-공기계-빌려줬다가-뭔가를-들켜버린-남편-대참사-모음집.html" style="text-decoration: none; color: #333; display: block;">
+            <a href="./충격적-아내에게-핸드폰-공기계-빌려줬다가-뭔가를-들켜버린-남편-대참사-기적.html" style="text-decoration: none; color: #333; display: block;">
                 <h2 style="margin: 0; font-size: 18px;">아내에게 핸드폰 공기계 빌려줬다가 ‘뭔가’를 들켜버린 남편 대참사</h2>
             </a>
         </li>
         <li style="margin: 15px 0; padding: 15px; background-color: #fff; border-radius: 5px; box-shadow: 0 1px 3px rgba(0,0,0,0.1);">
-            <a href="./대박-배민-리뷰-1점-받은-사장의-대처-리뷰.html" style="text-decoration: none; color: #333; display: block;">
+            <a href="./역대급-배민-리뷰-1점-받은-사장의-대처-요약.html" style="text-decoration: none; color: #333; display: block;">
                 <h2 style="margin: 0; font-size: 18px;">배민 리뷰 1점 받은 사장의 대처</h2>
             </a>
         </li></ul>
