--- a/output/vvv/절대-국민연금-추천하던-연금박사가-평가하는-이번-국민연금-개혁-반전.html
+++ b/output/vvv/절대-국민연금-추천하던-연금박사가-평가하는-이번-국민연금-개혁-반전.html
@@ -335,7 +335,7 @@
                     <nav class="navigation post-navigation">
                         <div class="nav-links">
                             <div class="nav-previous"><a href="대박-커플팰리스에-나온-월-300만원-남자와-결혼하려는-여자-TMI.html">커플팰리스에 나온 월 300만원 남자와 결혼하려는 여자</a></div>
-                            <div class="nav-next"><a href="절대-여고생-여동생이-친오빠에게-카톡하는-이유-해설.html">여고생 여동생이 친오빠에게 카톡하는 이유</a></div>
+                            <div class="nav-next"><a href="현실-한-남자-버튜버가-이세돌-소속-버튜버와-배그하다가-사과문을-쓴-이유-노하우.html">한 남자 버튜버가 이세돌 소속 버튜버와 배그하다가 사과문을 쓴 이유</a></div>
                         </div>
                     </nav>
                 </footer>
@@ -389,7 +389,7 @@
             ">
                 <a href="https://testpro.site/output/vvv/대박-커플팰리스에-나온-월-300만원-남자와-결혼하려는-여자-TMI.html" style="color: #333; text-decoration: none; padding: 8px 15px; border-radius: 4px; transition: background-color 0.3s;">◀ 이전 글</a>
 <a href="https://testpro.site/output/vvv/humor_1.html" style="color: #333; text-decoration: none; padding: 8px 15px; border-radius: 4px; background-color: #f0f0f0; transition: background-color 0.3s;">홈</a>
-<a href="https://testpro.site/output/vvv/절대-여고생-여동생이-친오빠에게-카톡하는-이유-해설.html" style="color: #333; text-decoration: none; padding: 8px 15px; border-radius: 4px; transition: background-color 0.3s;">다음 글 ▶</a>
+<a href="https://testpro.site/output/vvv/현실-한-남자-버튜버가-이세돌-소속-버튜버와-배그하다가-사과문을-쓴-이유-노하우.html" style="color: #333; text-decoration: none; padding: 8px 15px; border-radius: 4px; transition: background-color 0.3s;">다음 글 ▶</a>
             </div>
         </div>
     </nav>
